--- a/project.config.json
+++ b/project.config.json
@@ -15,6 +15,7 @@
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"cloudfunctionTemplateRoot": "cloudfunctionTemplate",
+	"compileType": "plugin",
 	"condition": {
 		"search": {
 			"current": -1,
